# wasm-asteroids

./: .gitignore  Cargo.toml  LICENSE.MIT  Readme.md  package-lock.json  package.json
.github/workflows/: build.yml  clippy.yml  rust.yml  rustfmt.yml
demo/: demo.html  demo.js
js/: demo.js
src/: alloc.rs  eventloop.rs  game.rs  geom.rs  input.rs  lib.rs  math.rs  render_path.rs  rng.rs  ship.rs  time.rs
static/: index.html
