[package]
edition = "2021"
name = "svg-asteroids"
license-file = "LICENSE.MIT"
version = "0.1.0"
authors = ["Igor null <m1el.2027@gmail.com>", "Avery Radmacher <avery.radmacher@gmail.com>"]

[lib]
crate-type=["cdylib"]

[dependencies]
js-sys = "0.3.57"
wasm-bindgen = "0.2.45"

[dependencies.rand]
version = "0.4.1"
default-features = false

[dependencies.web-sys]
version = "0.3.57"
features = ["console", "Window", "Performance"]